--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.rider": "1.1.0",
     "com.unity.ide.vscode": "1.0.7",
     "com.unity.package-manager-ui": "2.2.0",
+    "com.unity.recorder": "2.0.3-preview.1",
     "com.unity.render-pipelines.high-definition": "6.9.1-preview",
     "com.unity.shadergraph": "6.9.1",
     "com.unity.test-framework": "1.0.13",
